# assigment-image-rotation

solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  input-output.h  rotation.h  util.h  validator.h
solution/src/: bmp.c  image.c  input_output.c  main.c  rotation.c  util.c  validator.c
tester/: CMakeLists.txt
